css/main.css
/* ... */
.pagination .page-number.current {
  background: #ccc;
  border-color: #ccc;
  color: var(--content-bg-color);
}
.pagination {
  border-top: 1px solid #eee;
  margin: 120px 0 0;
  text-align: center;
}
.pagination .prev,
.pagination .next,
.pagination .page-number {
  border-bottom: 0;
  border-top: 1px solid #eee;
  transition: border-color 0.2s ease-in-out;
}
.pagination .prev:hover,
.pagination .next:hover,
.pagination .page-number:hover {
  border-top-color: var(--link-hover-color);
}
@media (max-width: 767px) {
  .pagination {
    border-top: 0;
  }
  .pagination .prev,
  .pagination .next,
  .pagination .page-number {
    border-bottom: 1px solid #eee;
    border-top: 0;
  }
  .pagination .prev:hover,
  .pagination .next:hover,
  .pagination .page-number:hover {
    border-bottom-color: var(--link-hover-color);
  }
}
.pagination .space {
  margin: 0;
  padding: 0;
}
.comments {
  margin-top: 60px;
  overflow: hidden;
}
.comment-button-group {
  display: flex;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  justify-content: center;
  margin: 1em 0;
}
.comment-button-group .comment-button {
  margin: 0.1em 0.2em;
}
.comment-button-group .comment-button.active {
  background: var(--btn-default-hover-bg);
  border-color: var(--btn-default-hover-border-color);
  color: var(--btn-default-hover-color);
}
.comment-position {
  display: none;
}
.comment-position.active {
  display: block;
}
.tabs-comment {
  margin-top: 4em;
  padding-top: 0;
}
.tabs-comment .comments {
  margin-top: 0;
  padding-top: 0;
}
.headband {
  background: var(--theme-color);
  height: 3px;
}
@media (max-width: 991px) {
  .headband {
    display: none;
  }
}
.site-brand-container {
  display: flex;
  flex-shrink: 0;
  padding: 0 10px;
}
.use-motion .column,
.use-motion .site-brand-container .toggle {
  opacity: 0;
}
.site-meta {
  flex-grow: 1;
  text-align: center;
}
@media (max-width: 767px) {
  .site-meta {
    text-align: center;
  }
}
.custom-logo-image {
  margin-top: 20px;
}
@media (max-width: 991px) {
  .custom-logo-image {
    display: none;
  }
}
.brand {
  border-bottom: 0;
  color: var(--brand-color);
  display: inline-block;
  padding: 0 40px;
}
.brand:hover {
  color: var(--brand-hover-color);
}
.site-title {
  font-family: Lato, 'PingFang SC', 'Microsoft YaHei', sans-serif;
  font-size: 1.375em;
  font-weight: normal;
  line-height: 1.5;
  margin: 0;
}
.site-subtitle {
  color: #999;
  font-size: 0.8125em;
  margin: 10px 0;
}
.use-motion .site-title,
.use-motion .site-subtitle,
.use-motion .custom-logo-image {
  opacity: 0;
  position: relative;
  top: -10px;
}
.site-nav-toggle,
.site-nav-right {
  display: none;
}
@media (max-width: 767px) {
  .site-nav-toggle,
  .site-nav-right {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}
.site-nav-toggle .toggle,
.site-nav-right .toggle {
  color: var(--text-color);
  padding: 10px;
  width: 22px;
}
.site-nav-toggle .toggle .toggle-line,
.site-nav-right .toggle .toggle-line {
  background: var(--text-color);
  border-radius: 1px;
}
@media (max-width: 767px) {
  .site-nav {
    --scroll-height: 0;
    height: 0;
    overflow: hidden;
    transition: 0.2s ease-in-out;
    transition-property: height, visibility;
    visibility: hidden;
  }
  body:not(.site-nav-on) .site-nav .animated {
    animation: none;
  }
  body.site-nav-on .site-nav {
    height: var(--scroll-height);
    visibility: unset;
  }
}
.menu {
  margin: 0;
  padding: 1em 0;
  text-align: center;
}
.menu-item {
  display: inline-block;
  list-style: none;
  margin: 0 10px;
}
@media (max-width: 767px) {
  .menu-item {
    display: block;
    margin-top: 10px;
  }
  .menu-item.menu-item-search {
    display: none;
  }
}
.menu-item a {
  border-bottom: 0;
  display: block;
  font-size: 0.8125em;
  transition: border-color 0.2s ease-in-out;
}
.menu-item a:hover,
.menu-item a.menu-item-active {
  background: var(--menu-item-bg-color);
}
.menu-item i[class^='fa'] {
  margin-right: 8px;
}
.menu-item .badge {
  background: #eee;
  border-radius: 0;
  color: #555;
  font-weight: bold;
  line-height: 1;
  margin-left: 0.35em;
  padding: 1px 4px;
  text-shadow: none;
}
.use-motion .menu-item {
  visibility: hidden;
}
.sidebar {
  left: -320px;
}
.sidebar-active .sidebar {
  left: 0;
}
.sidebar {
  background: #222;
  bottom: 0;
  box-shadow: inset 0 2px 6px #000;
  max-height: 100vh;
  overflow-y: auto;
  position: fixed;
  top: 0;
  transition: 0.2s ease-out;
  transition-property: left, right;
  width: 320px;
  z-index: 20;
}
.sidebar a {
  border-bottom-color: #555;
  color: #999;
}
.sidebar a:hover {
  border-bottom-color: #eee;
  color: #eee;
}
.links-of-author:not(:first-child) {
  margin-top: 15px;
}
.links-of-author a {
  border-bottom-color: #555;
  display: inline-block;
  margin-bottom: 10px;
  margin-right: 10px;
  vertical-align: middle;
  transition: all 0.2s ease-in-out;
}
.links-of-author a::before {
  background: #cb13ff;
  display: inline-block;
  margin-right: 3px;
  transform: translateY(-2px);
  border-radius: 50%;
  content: ' ';
  height: 4px;
  width: 4px;
}
.links-of-blogroll-item {
  padding: 0 5px;
}
.popular-posts .popular-posts-item .popular-posts-link:hover {
  background: none;
}
.sidebar-dimmer {
  background: #000;
  height: 100%;
  left: 0;
  opacity: 0;
  position: fixed;
  top: 0;
  transition: visibility 0.4s, opacity 0.4s;
  visibility: hidden;
  width: 100%;
  z-index: 10;
}
.sidebar-active .sidebar-dimmer {
  opacity: 0.7;
  visibility: visible;
}
.sidebar-inner {
  color: #999;
  padding: 18px 10px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.sidebar-toggle {
  bottom: 61px;
  height: 16px;
  padding: 5px;
  width: 16px;
  background: #222;
  cursor: pointer;
  opacity: 0.8;
  position: fixed;
  z-index: 30;
  left: 30px;
}
@media (max-width: 991px) {
  .sidebar-toggle {
    left: 20px;
  }
}
.sidebar-toggle:hover {
  opacity: 1;
}
/* ... */

